# braned

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
braned/: __main__.py  config.py  data.py  models.py
braned/sys/: cli.py  daem.py
braned/vector_stores/: sqlite.py
data/: me.md
tests/: conftest.py  test_daemon.py  test_sqlite.py
