[project]
name = "braned"
version = "0.1.0"
description = "Daemon for branebridge processes"
authors = [
    {name = "Shel Soloa",email = "shel@shelsoloa.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
